[package]
name = "ws2812-nop-samd51"
version = "0.1.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"

[dependencies]
smart-leds-trait = "~0.2"
cortex-m = "~0.6"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dev-dependencies]
atsamd-hal = "~0.7"
metro_m4 = "0.4.0"
cortex-m-rt = "~0.6"
panic-halt = "~0.2"
smart-leds = "~0.2"
